@@ -3,6 +3,13 @@ GTM HTTP Fetcher Release Notes
 Project site:     http://code.google.com/p/gtm-http-fetcher/
 Discussion group: http://groups.google.com/group/google-toolbox-for-mac
 
+27-Oct-2010
+
+Added downloadPath and downloadFileHandle properties
+Added waitForCompletionWithTimeout:
+Renamed GTMAssertSelectorNilOrImplementedWithArgs()
+
+
 4-Oct-2010
 
 Ensure that delegate is nil when not retained.
